--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2"
   }
 }
