--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Diego Videla Silva",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "nodemon": "^3.1.9"
   },
   "dependencies": {
